--- a/submissions/dissertation/dissertation.tex
+++ b/submissions/dissertation/dissertation.tex
@@ -24,9 +24,6 @@
 \usepackage{pdfpages}
 \usepackage{pgfplots}
 
-\usepackage{tikz}
-\usetikzlibrary{arrows,automata,positioning}
-
 \usepackage{footnote}
 
 % maths
@@ -74,7 +71,7 @@
     showspaces=false,              
     showstringspaces=false,
 	language=Lisp,
-	float, floatplacement=H,
+	%float, floatplacement=H,
 	frame=single,
 	breaklines,
 	tabsize=4
@@ -83,9 +80,6 @@
 \newcommand{\code}[1]{\texttt{#1}}
 \newcommand*\conj[1]{\overline{#1}}
 \newcommand*\vect[1]{\bm{#1}}
-
-% No section numbering
-% \setcounter{secnumdepth}{0}
 
 \bibliographystyle{siam}
 
