--- a/submissions/dissertation/sections/abstract.tex
+++ b/submissions/dissertation/sections/abstract.tex
@@ -1,3 +1,16 @@
 \begin{abstract}
-	\lipsum[1]
+
+	A prediction market is a means of aggregating information about random
+	variables and using the beliefs of its participants to calculate a
+	prediction on the variable's outcome. Decentralised prediction markets
+	differ from traditional ones in that they allow any user to specify the
+	bets on which they would like to trade. In this project we implement a
+	decentralised prediction market that uses participation from the community
+	to both specify the available markets and then decide on their outcome by
+	submission of reports from a group of arbiters. The mechanism we implement
+	is incentive compatible, meaning it is always in a user's best interests to
+	act truthfully: this is achieved by rewarding arbiters for truthful
+	reporting and ensuring this payoff is never less than what they would gain
+	by misreporting.
+
 \end{abstract}
